--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^1.4.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-fbsdk": "git+https://github.com/facebook/react-native-fbsdk.git",
