--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,10 @@ target 'Enjoy' do
 
   pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+
+
   target 'EnjoyTests' do
     inherit! :search_paths
     # Pods for testing
