--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "@react-native-community/geolocation": "^1.4.2",
+    "firebase": "^6.3.3",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-fbsdk": "git+https://github.com/facebook/react-native-fbsdk.git",
-    "react-native-google-signin": "^2.0.0"
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-google-signin": "^2.0.0",
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "twilio": "^3.33.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
